<resources>
    <string name="app_name">Fit Body</string>
    <string name="main_title">Fit Body</string>
    <string name="ideal_weight_title">Ideal Weight</string>
    <string name="calorie_calculator_title">Calorie Calculator</string>

    <string name="age_hint">age</string>
    <string name="male_hint">male</string>
    <string name="female_hint">female</string>
    <string name="height_hint">height(cm)</string>
    <string name="weight_hint">weight(kg)</string>
    <string name="calculate_text">Calculate</string>

    <string name="ideal_weight_button_text">Ideal Weight</string>
    <string name="calorie_calculator_button_text">Calorie Calculator</string>
    <string name="body_type_button_text">Body Type</string>

    <string-array name="spinner_strings">
        <item>Basal Metabolic Rate (BMR)</item>
        <item>Sedentary - little or no exercise</item>
        <item>Lightly Active – exercise/sports 1–3 times/week</item>
        <item>Moderately Active – exercise/sports 3–5 times/week</item>
        <item>Very Active – hard exercise/sports 6–7 times/week</item>
        <item>Extra Active - very hard exercise/sports or physical job</item>
    </string-array>

    <string-array name="spinner_values">
        <item>1</item>
        <item>1.2</item>
        <item>1.375</item>
        <item>1.55</item>
        <item>1.725</item>
        <item>1.9</item>
    </string-array>

    <string name="weight_desc">The Ideal Weight Calculator computes the ideal body weight as well as a healthy body weight range based on height and gender.</string>
    <string name="calorie_desc">The Calorie Calculator can be used to estimate the calories you need to maintain your weight constant.</string>
    <string name="input_controls_desc">Please, fill in the data bellow:</string>

    <string name="error_invalid_values_text">Please enter valid positive numbers.</string>
    <string name="error_calculation_failed">Calculation failed. Please try again.</string>

    <string name="info_text">Vladimir Drešević\nITAcademy</string>

    <string name="error_enter_all_values_text">Please, enter all values.</string>
    <string name="calorie_calc_result">Amount of calories/day to maintain your weight:\n%1$d </string>
    <string name="ideal_weight_result">Your ideal weight is:\n%1$.2fkg</string>
</resources>