<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ideal_weight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.IdealWeightActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background_color"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <!-- GORNJA SEKCIJA - Slika i opis -->
        <LinearLayout
            style="@style/InputSection.Top"
            android:layout_weight="1">

            <ImageView
                style="@style/InputSectionIcon"
                app:srcCompat="@drawable/ic_ideal_weight" />

            <TextView
                style="@style/InputSectionDescription"
                android:text="@string/weight_desc" />
        </LinearLayout>

        <!-- SREDNJA SEKCIJA - Input polja -->
        <LinearLayout
            style="@style/InputSection"
            android:layout_marginTop="@dimen/segments_gap"
            android:layout_marginBottom="@dimen/segments_gap">

            <TextView
                style="@style/InputSectionTitle"
                android:text="@string/input_controls_desc" />

            <!-- RadioGroup za pol -->
            <RadioGroup
                android:id="@+id/genderRadioGroup"
                style="@style/GenderRadioGroup">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    style="@style/GenderRadioButton"
                    android:checked="true"
                    android:text="@string/male_hint" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    style="@style/GenderRadioButton"
                    android:text="@string/female_hint" />
            </RadioGroup>

            <!-- Razmak -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_controls_gap" />

            <!-- Visina -->
            <EditText
                android:id="@+id/heightEditText"
                style="@style/FitBodyEditText"
                android:hint="@string/height_hint"
                android:inputType="number" />

        </LinearLayout>

        <!-- DONJA SEKCIJA - Dugme -->
        <Button
            style="@style/FitBodyButton"
            android:onClick="onCalculateClick"
            android:text="@string/calculate_text" />

    </LinearLayout>
</LinearLayout>